--- a/conf/config.properties
+++ b/conf/config.properties
@@ -1,6 +1,33 @@
 port = 8800
-grid.mcp.address = 127.0.0.1:8100,node00.local:8100,yacygrid.com:8100,searchlab.eu:8100
+grid.mcp.address = yacy-mcp:8100
+grid.ftp.address = nfsroot:9hnHcmkhssiP@vsftpd.yacy-grid.svc.cluster.local:21
+grid.broker.address = adminRabbitMQ:CxMLzJnuDm8NEqD3fvzdMUnGWfFv732z@rabbitmq:5672
+grid.broker.lazy = true
+grid.assets.delete = true
 
-# the address of the elasticsearch transport client instance(s): this will be overwritten by the information which the MCP delivers
-grid.elasticsearch.address = 127.0.0.1:9300,node01.local:9300,node02.local:9300,node03.local:9300,node04.local:9300,yacygrid.com:9300,searchlab.eu:9300
-grid.elasticsearch.clusterName =
+
+# the grid name is used to separate different grid networks.
+# Only networks with the same name connect with each other
+grid.name = vsm_yacy-grid
+
+# the address of the elasticsearch transport client instance(s)
+grid.elasticsearch.address = 10.0.0.61:9300,10.0.0.62:9300,10.0.0.63:9300
+grid.elasticsearch.clusterName = es-live
+
+grid.elasticsearch.webIndexName = web
+
+# limitation and throttling:
+# A limit is the maximum number of entries that a queue may take. This is a configuration which is passed to
+# the RabbitMQ queue initialization. If the limit is set to 0, it means no limitation.
+# In case that a target queue reaches it's maximum, it will reject new entries, followed by a requeueing of already dequeued messages
+# of origin queues.
+grid.broker.queue.limit = 50000
+# A throttling is a care-taking of the maximum number of entries in target queues. If the sum of all entries in target queues
+# is approaching the throttling number, reading from the origin queues is throttled (= pauses are made, processes act slower).
+# Queue limit numbers cannot be compared with trottling numbers, because queue limits denote absolute numbers of one queue
+# while throttling numbers denote the sum of all entries in target queues. It should hold:
+#     throttling < limit * number-of-target-queues
+# But as long as throttling >= limit it could happen that a queue reaches it's limit before throttling starts. To be save, set
+#     throttling < limit
+# A throttling of 0 means no throttling.
+grid.broker.queue.throttling = 48000
