--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,17 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
+    }
+}
+
+plugins {
+    id 'com.github.johnrengelman.shadow' version '5.1.0'
+}
+
 apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'application'
@@ -11,6 +25,7 @@ sourceSets {
     }
 }
 
+archivesBaseName = 'yacy_grid_search'
 mainClassName = "net.yacy.grid.search.Search"
 applicationDefaultJvmArgs = ["-Xmx1024m"]
 
@@ -35,6 +50,15 @@ jar {
         attributes 'Main-Class': 'net.yacy.grid.search.Search'
     }
 }
+
+shadowJar {
+    mergeServiceFiles()
+
+    from('conf') {
+        into 'conf'
+    }
+}
+assemble.dependsOn shadowJar
 
 dependencies {
     compile group: 'com.hazelcast', name: 'hazelcast', version: '4.2.+'
