update hazelcast to 5.1 and add local config

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,13 @@ repositories {
      mavenCentral()
 }
 
+run {
+    jvmArgs = [
+        '-Dhazelcast.config=./conf/hazelcast.yaml',
+        '-Dhazelcast.diagnostics.enabled=true'
+    ];
+}
+
 jar {
     manifest {
         attributes 'Main-Class': 'net.yacy.grid.search.Search'
@@ -52,7 +59,7 @@ shadowJar {
 assemble.dependsOn shadowJar
 
 dependencies {
-    implementation 'com.hazelcast:hazelcast:4.2.+'
+    implementation 'com.hazelcast:hazelcast:5.1.+'
     implementation 'com.rabbitmq:amqp-client:5.14.+'
     implementation 'commons-net:commons-net:3.+'
     implementation 'io.minio:minio:8.3.+'
